[package]
name = "quarkstrom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Graphics
wgpu = "0.15.1"
winit = "0.27.5"
winit_input_helper = "0.13.0"

# Debug
env_logger = "0.10"
log = "0.4"

# Gui
imgui = "0.10.0"
imgui-wgpu = "0.22.0"
imgui-winit-support = "0.10.0"

# Math
ultraviolet = "0.9.1"

rand = "0.8.5"

# Other
bytemuck = { version = "1.12", features = [ "derive" ] }
pollster = "0.3.0"
futures-intrusive = "0.5.0"
