[package]
name = "quarkstrom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Graphics
wgpu = "0.16.1"
winit = "0.28.6"
winit_input_helper = "0.14.1"

# Gui
egui = "0.22.0"
egui-wgpu = "0.22.0"
egui-winit = "0.22.0"

# Math
ultraviolet = "0.9.1"

fastrand = "2.0.0"

# Other
bytemuck = { version = "1.12", features = [ "derive" ] }
pollster = "0.3.0"
futures-intrusive = "0.5.0"
arc-swap = "1.6.0"
once_cell = "1.18.0"